
StandardManager:  Catch and log exceptions thrown by session.expire() when
sessions are being timed out.  Previously, any such exception would terminate
the thread that checks for timed out sessions.

StandardWrapperValve:  Do not set a character encoding on the default page
created for an HTTP status code.  This was causing problems for Netscape
Navigator when handling 302 redirects.


----------------
Jasper Bug Fixes:
----------------

Parser:  Fix a bug that was causing null pointer exceptions in
JakartaCommentGenerator.


-----------------
Webapps Bug Fixes:
-----------------


============================
KNOWN ISSUES IN THIS RELEASE:
============================


--------------------------
Tomcat 4.0 and XML Parsers:
--------------------------

Previous versions of Tomcat 4.0 exposed the XML parser used by Jasper (the
JAXP/1.1 reference implementation) to web applications.  This is no longer
the case, because Jasper loads its parser with a new class loader instead.
Keep the following points in mind when considering how to use XML parsers
in Tomcat 4.0 and your web applications:

* If you wish to make the JAXP/1.1 RI XML parser available to all web
  applications, simply move the "jaxp.jar" and "crimson.jar" files from
  the "$CATALINA_HOME/jasper" directory to the "$CATALINA_HOME/lib" directory.

* If you wish to make another XML parser that is JAXP/1.1-compatible
  available to all web applications, install that parser into the
  "$CATALINA_HOME/lib" directory and remove "jaxp.jar" and "crimson.jar"
  from the "$CATALINA_HOME/jasper" directory.  It has been reported that
  Xerces 1.3.1 can be used in this fashion, but 2.x alpha releases
  can not be.

* If you wish to use an XML parser (such as Xerces) in the WEB-INF/lib
  directory of your web application, this should now be possible, because
  of the modified JAXP 1.1 parser mentioned below.

* Make sure you do *not* place an XML parser in your Java system extensions