@@ -46,8 +46,6 @@ release, please submit a bug report as quickly as possible.
 Bugs That Must Be Addressed Before Final Release:
 ------------------------------------------------
 
-Catalina    3614    Bug in manager webapp
-
 Connectors  2997    Webapp connector should recover when Tomcat is restarted
 
 Connectors  3476    Cannot use other than default context when using mod_webapp
@@ -57,13 +55,9 @@ Connectors  3509    Apache 1.3.20 and mod_webapp and Tomcat 4b7 HANGS
 
 Connectors  3534    File Upload doesn't work with Apache, mod_webapp, Tomcat 4
 
-Jasper      3617    "null" in JasperException
-
 
 Nice To Have Fixes Before Final Release:
 ---------------------------------------
-
-Connectors  3570    Info page reporting wrong server port
 
 Jasper      3055    <jsp:plugin> tag ignores the name attribute
 
